--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col-lg-9 col-xl-8 text-center">
       <p class="lead">{{ .Params.Lead | safeHTML }}</p>
-      <a class="btn btn-primary btn-lg px-4 mb-2" href="{{ "docs/价值/introduction/" | relURL }}" role="button">Get started</a>
+      <a class="btn btn-primary btn-lg px-4 mb-2" href="{{ "docs/价值/序/" | relURL }}" role="button">Get started</a>
       <p class="meta">如果身上唯一的工具是把锤子，那就会把所有的问题都看成钉子。</p>
     </div>
   </div>
