--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -11,10 +11,10 @@
 // @import "highlight.js/scss/dracula";
 
 /** Import KaTeX */
-@import "katex/dist/katex";
+// @import "katex/dist/katex";
 
 /** Import theme styles */
-@import "common/fonts";
+// @import "common/fonts";
 @import "common/global";
 @import "common/dark";
 @import "components/doks";
